Fixing whitespace problem

--- a/styles.css
+++ b/styles.css
@@ -11,36 +11,37 @@ body {
 	margin-left: auto;
 	}
 
-.header-wrapper {
-	}
-	
-.info-wrapper {
-	}
-	
-.table-wrapper {
-	}
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 table {
 	background-color: rgb(255,255,255);
 	border-collapse: collapse;
 	}
-th,td {
-	padding: 3px 24px 3px 24px;}
 th.title {
 	text-transform: uppercase;
 	text-align: center;
+	padding: 16px;
 	}
 th.period {
 	text-align: left;
+	padding-left: 16px;
+	padding-right: 16px;
+	padding-top: 8px;
+	padding-bottom: 8px;
 	}
 tr.even {
 	background-color: rgb(232,218,239);
 	}
 td {
 	text-align: center;
+	padding-right: 16px;
 	}
 tr.title {
-	text-align: center;}
+	text-align: center;
+	}
 
 input[type="submit"] {
 	color: rgb(255,255,255);
